[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avito-library"
version = "0.1.1"
description = "Playwright-based инструментарий для парсинга Авито: детекторы состояний, решатель капчи и парсеры каталога/карточек."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Stepan Orlov" }
]
dependencies = [
    "playwright",
    "asyncpg",
    "beautifulsoup4",
    "lxml",
    "numpy",
    "opencv-python",
    "httpx>=0.25.0",
]
keywords = ["avito", "playwright", "asyncio", "captcha", "parser"]

[project.urls]
Repository = "https://github.com/Stepan2222000/avito-library"
Issues = "https://github.com/Stepan2222000/avito-library/issues"

[project.scripts]
avito-install-chromium = "avito_library.install_browser:install_playwright_chromium_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["avito_library", "avito_library.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
avito_library = ["data/*.json"]
